--- a/one.html
+++ b/one.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Larry</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
+
 <body>
-	
-</body>
-</html>
+    <h1>Larry Fine</h1>
+    <div id="larryfine">
+
+    </div>
+    <div class="bio">
+        <p>
+            Larry Fine was born Louis Fienberg on October 5, 1902, on the south side of Philadelphia, Pennsylvania. His father, Joseph Fienberg, and mother Fanny Lieberman owned a watch repair and jewelry shop. Larry had two brothers, Morris, a younger brother Phillip who died prematurely, and a sister, Lila, who became a school teacher.
+
+            As a child, Larry’s left arm was badly burned from acid used by his father in the jewelry business. Larry required immediate attention, and a skin graft was done on his arm. Larry’s doctors recommended that he be given violin lessons as a form of therapy. Playing the violin was supposed to strengthen his damaged arm muscles. Larry’s skill as a violinist became so impressive that eventually, he began to play professionally. Larry played in local theater amateur nights usually taking the top prize.
+
+            Interestingly enough, along with being a violin player he also was a boxer. Larry earned money as a lightweight fighter. Later on, he would develop an act in which he would do a Russian dance while playing the violin. It was this act that caught the attention of Ted Healy. After Shemp decided to leave Ted Healy’s act, Moe suggested that perhaps Larry could replace Shemp. The trio, Moe, Larry, and Shemp first appeared on Broadway in A Night in Venice. Larry also appeared in The Stooges first full-length motion picture, “Soup to Nuts,” in 1930 for 20th Century Fox. Of course, Larry went on with Moe and Curly to form The Three Stooges, who appeared in the Columbia shorts beginning in 1934.
+
+            Larry and his wife, Mable, lived in hotels, first in the President Hotel in Atlantic City, where his daughter Phyllis was raised, then the Knickerbocker Hotel in Hollywood. Later Larry bought an old Mediterranean style house in the Los Feliz area of Los Angeles. Larry had two children. His son, Johnny died in a tragic automobile accident on November 17, 1961, at age 24. Larry also had a daughter, Phyllis. Larry’s wife, Mabel, died on May 30, 1967. Larry has five grandchildren, Christy Lynn Clark, John Fine, Jr., Phyllis Miller, Kris Cutler, and Eric Lamond.
+
+            After 1958, Larry, Moe, and Curly Joe performed before live audiences all across the country, appeared in six full-length motion pictures, appeared on numerous television shows, and performed in other productions until Larry Fine suffered a stroke during the filming of “Kook’s Tour” in 1970. After his stroke, Larry never performed again. Larry Fine passed away on January 24, 1975.
+
+        </p>
+    </div>
+
+</body></html>
