--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Three Stooges</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@531&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;500;600&family=Spartan:wght@531&display=swap" rel="stylesheet">
+
+
 </head>
+
 <body>
-	<h1>hi</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet possimus, praesentium ullam magnam suscipit et saepe obcaecati reprehenderit pariatur nesciunt.</p>
-</body>
-</html>
+   <header>
+    <h1>The Three Stooges</h1>
+    </header>
+<div class="main">
+   
+    <div id="larry">
+        <ul class="quickfacts">
+            <li>Birth Place: Philadelphia, Pennsylvania</li>
+            <li>Birth Date: October 5, 1902</li>
+            <li>Date of Passing: January 24, 1975</li>
+            <li>Buried: Forest Lawn Memorial Park, Glendale, CA</li>
+            <li>Age: 72</li>
+            <li>Height: 5’4″</li>
+        </ul>
+        <a href="one.html">Larry</a>
+    </div>
+
+    <div id="moe">
+        <ul class="quickfacts">
+            <li>Birth Place: Bensonhurst, New YorkBirth Date: June 19, 1897</li>
+            <li>Date of Passing: May 4, 1975</li>
+            <li>Buried: Hillside Memorial Park Cemetery, Culver City, CA</li>
+            <li>Age: 77</li>
+            <li>Height: 5′ 3″</li>
+        </ul>
+        <a href="two.html">Moe</a>
+
+    </div>
+    <a href="three.html">Curly</a>
+</div>
+
+</body></html>
