--- a/index.html
+++ b/index.html
@@ -12,35 +12,21 @@
 </head>
 
 <body>
-   <header>
-    <h1>The Three Stooges</h1>
-    </header>
-<div class="main">
-   
-    <div id="larry">
-        <ul class="quickfacts">
-            <li>Birth Place: Philadelphia, Pennsylvania</li>
-            <li>Birth Date: October 5, 1902</li>
-            <li>Date of Passing: January 24, 1975</li>
-            <li>Buried: Forest Lawn Memorial Park, Glendale, CA</li>
-            <li>Age: 72</li>
-            <li>Height: 5’4″</li>
-        </ul>
-        <a href="one.html">Larry</a>
-    </div>
+    <div class="content">
 
-    <div id="moe">
-        <ul class="quickfacts">
-            <li>Birth Place: Bensonhurst, New YorkBirth Date: June 19, 1897</li>
-            <li>Date of Passing: May 4, 1975</li>
-            <li>Buried: Hillside Memorial Park Cemetery, Culver City, CA</li>
-            <li>Age: 77</li>
-            <li>Height: 5′ 3″</li>
-        </ul>
-        <a href="two.html">Moe</a>
 
+
+
+
+        <div class="main">
+            <div class="navbar">
+                <a href="/two.html" class="stoogelink1">MOE</a>
+                <a href="/three.html" class="stoogelink2">CURLY</a>
+                <a href="/one.html" class="stoogelink3">LARRY</a>
+            </div>
+
+
+        </div>
     </div>
-    <a href="three.html">Curly</a>
-</div>
 
 </body></html>
