--- a/one.html
+++ b/one.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
+    <a href="index.html" id="home">The<br>Three<br>Stooges</a>
     <h1>Larry Fine</h1>
+    <div id="larry">
+        <ul class="quickfacts">
+            <li>Birth Place: Philadelphia, Pennsylvania</li>
+            <li>Birth Date: October 5, 1902</li>
+            <li>Date of Passing: January 24, 1975</li>
+            <li>Buried: Forest Lawn Memorial Park, Glendale, CA</li>
+            <li>Age: 72</li>
+            <li>Height: 5’4″</li>
+        </ul>
+  
+    </div>
     <div id="larryfine">
 
     </div>
