--- a/three.html
+++ b/three.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Curly</title>
+    <meta charset="UTF-8">
+    <title>Moe</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@531&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;500;600&family=Spartan:wght@531&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-	
+    <a href="index.html" id="home">The<br>Three<br>Stooges</a>
+    <h1>Curly Howard</h1>
+    <div id="curly">
+
+        <ul class="quickfacts">
+            <li>Birth Place: Bensonhurst, New York City, NY</li>
+            <li>Birth Date: October 22, 1903</li>
+            <li>Date of Passing: January 18, 1952</li>
+            <li>Buried: Home of Peace Cemetery, CA</li>
+            <li>Age: 49</li>
+            <li>Height: 5′ 5″</li>
+        </ul>
+
+    </div>
+    <div id="curlyhoward">
+
+    </div>
+    <div class="bio">
+        <p>
+            Curly Howard was born Jerome Lester Horwitz to Jenny and Solomon Horwitz on October 22, 1903, in Bath Beach, a summer resort in a section of Brooklyn. He was the fifth and youngest of the five Horwitz brothers. Curly’s interest in show business grew as he watched his brothers, Shemp and Moe perform as stooges in Ted Healy’s act. After Shemp left the Healy act, Moe suggested to Healy that his kid brother Jerome was available and would make an excellent replacement for Shemp.
+
+            Curly at the time was known as “Babe.” When Babe showed up to talk to Healy to join the act he had long wavy brown hair and a mustache. In order to join the act Babe agreed to shave off his mustache and shave his head. Now referred to as Curly, he joined the team and played with the Stooges in vaudeville acts and comedy shorts for MGM. Later, in 1934, Curly along with Larry and Moe performed in many of the shorts that were produced for Columbia Pictures.
+
+            After Curly’s first marriage was annulled, he married three more times. On June 7, 1937, he married Elaine Ackerman. In 1938, Elaine gave birth to Curly’s first child, a daughter, Marilyn. Elaine and Curly divorced on July 11, 1940, after only 3 years of marriage. On October 17, 1945, Curly married Marion Buxbaum. After a miserable three months of arguments and accusations, Marion and Curly separated on January 14, 1946, and Curly sued for divorce. This divorce was quite scandalous and notices were carried in all the local papers.
+
+            It was after his separation from Marion that Curly’s health started its rapid decline. On May 6, 1946, he suffered a stroke during the filming of his 97th Three Stooges comedy, “Half-Wits’ Holiday” (1947). A year later Curly met Valerie Newman, whom he married on July 31, 1947. Valerie was Curly’s fourth wife, and she nursed him through those last, awful years. Valerie gave birth to a daughter, Janie.
+
+            Finally, in 1949, Curly’s health took a severe turn for the worse when he suffered his second in a series of strokes and was rushed to Cedars of Lebanon Hospital in Hollywood. Curly Howard died on January 18, 1952. He was 48 years old.
+
+
+        </p>
+    </div>
+
+
 </body>
+
 </html>
