--- a/two.html
+++ b/two.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Moe</title>
-        <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;500;600&family=Spartan:wght@531&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+    <a href="index.html" id="home">The<br>Three<br>Stooges</a>
     <h1>Moe Howard</h1>
+    <div id="moe">
+        <ul class="quickfacts">
+            <li>Birth Place: Bensonhurst, New York</li>
+            <li>Birth Date: June 19, 1897</li>
+            <li>Date of Passing: May 4, 1975</li>
+            <li>Buried: Hillside Memorial Park Cemetery, Culver City, CA</li>
+            <li>Age: 77</li>
+            <li>Height: 5′ 3″</li>
+        </ul>
+        <a href="two.html">Moe</a>
+
+    </div>
     <div id="moehoward">
 
     </div>
