--- a/one.html
+++ b/one.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Larry</title>
     <link rel="stylesheet" href="/css/style.css">
+     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;500;600&family=Spartan:wght@531&display=swap" rel="stylesheet">
 
 </head>
 
