--- a/homework-one/index.html
+++ b/homework-one/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Three Stooges</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@531&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@400;500;600&family=Spartan:wght@531&display=swap" rel="stylesheet">
 
@@ -20,7 +20,7 @@
 
         <div class="main">
             <div class="navbar">
-                <a href="/two.html" class="stoogelink1">MOE</a>
+                <a href="two.html" class="stoogelink1">MOE</a>
                 <a href="/three.html" class="stoogelink2">CURLY</a>
                 <a href="/one.html" class="stoogelink3">LARRY</a>
             </div>
